removed extra spacing issue, fixed border

--- a/css/style.css
+++ b/css/style.css
@@ -2245,9 +2245,7 @@ body.outcomes {
     font-size: 89px;
     letter-spacing: -2.67px;
   }
-  /* div.container.outcomes-border{
-    border-bottom:0px;
-  } */
+
   .info{
     padding-bottom:0px;
   }
